--- a/assets/css/johndoe.css
+++ b/assets/css/johndoe.css
@@ -12793,8 +12793,8 @@ pre .code {
   height: 100%;
   /* height: 80vh; */
   min-height: 600px;
-  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../imgs/bg.jpg);
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../imgs/bg.jpg);
+  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../imgs/intro-bg.png);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../imgs/intro-bg.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
